# bot-gold-v3

./: .gitattributes  .gitignore  README.md
engine-rust/: Cargo.toml  Dockerfile  README.md  build.rs
engine-rust-v2/: Cargo.toml  Dockerfile  README.md  build.rs  optimizer_result.json
engine-rust-v2/src/: log_writer.rs  main.rs  optimizer.rs  slack.rs  strategy.rs  strategy_new.rs
engine-rust-v3/: Cargo.toml  build.rs
engine-rust-v3/src/: main.rs
engine-rust-v4/: Cargo.toml  README.md
engine-rust-v4/src/: main.rs
engine-rust/src/: main.rs
python_bridge/: Dockerfile  README.md  __init__.py  __main__.py  config.py  logger.py  main.py  models.py  mt5_connector.py  requirements.txt  test_history_request.py  worker.py  zmq_publisher.py
scripts/: Dockerfile  backtest.py  batch_info.json  dashboard.py  engine-start-dry.ps1  engine-start-dry.sh  engine-start-live.ps1  engine-start-live.sh  history_service.py  opt_no_trend_results.csv  opt_results.csv  optimize_backtest.py  optimize_no_trend.py  order_monitor.py  order_monitor_v2.py  requirements.txt  test_order.py  test_subscribe.py
