[package]
name = "engine-rust-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rand = "0.8"
