[package]
name = "engine_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
atty = "0.2"
